src/test/ui/span/borrowck-ref-into-rvalue.nll.stderr
error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/borrowck-ref-into-rvalue.rs:14:14
   |
LL |         Some(ref m) => {
   |              ^^^^^
...
LL |     }
   |     - drop of temporary value occurs here
LL |     println!("{}", *msg);
   |                    ---- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0713`.
